--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "start:server": "ts-node server/server.ts"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "svelte": "^3.46.4",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2",
     "ws": "^8.5.0"
@@ -15,6 +15,14 @@
     "@types/uuid": "^8.3.4",
     "@types/ws": "^8.5.2",
     "html-webpack-plugin": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.5.0",
+    "svelte": "^3.46.4",
     "svelte-loader": "^3.1.2",
     "ts-loader": "^9.2.7",
     "ts-node": "^10.6.0",
